@@ -36,7 +36,7 @@ TODO (know issues in CPU model):
     for a lock, and any other processor is responsible for this.
 
 [!] AMD and Intel x86_64 implementations are different. 
-    Currently Bochs emulation is according to Intel version.
+    Currently Bochs emulation is according to AMD version.
     Do we need to support both ?
 
 [!] More flexible CPUID - vendor and etc
